Fri Oct  9 14:09:41 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-openbsd.h:
          Define ACE_HAS_ICMP_SUPPORT to value 1.

+Fri Oct  9 08:04:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Thread_Attrs_Test.cpp:
          Fixed compile error in single threaded builds

Thu Oct  8 13:46:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
          Don't convert odt files

Thu Oct  8 08:58:25 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Added $(PLATFORM_XT_LIBS) to PLATFORM_TK_LIBS to fix linking errors.

Wed Oct  7 09:21:30 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-openbsd.h:
          Added a few defines.

Wed Oct  7 07:49:00 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Adjusted Tcl/Tk flags.

Tue Oct  6 20:22:28 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
          Reorganised file.

Tue Oct  6 18:33:50 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Added a test for ACE_OS::fileno(). Patch to cleanup ACE_OS::fileno()
          implementation will be committed later.

Tue Oct  6 14:06:02 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-openbsd.h:
          Minor cleanup.

Tue Oct  6 06:20:42 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Also check idl3 files as idl file

Sun Oct  4 19:36:27 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_stdio.inl (vsnprintf): Added some more checks in other
          parts of the code to ensure we don't index before the bounds of
          the array.  Thanks to Johnny Willemsen for suggesting this.

Sun Oct  4 14:23:55 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_stdio.inl (vsnprintf): Added a check to ensure we